--- a/ApiWeatherKrasnov/ApiWeatherKrasnov/MainPage.xaml
+++ b/ApiWeatherKrasnov/ApiWeatherKrasnov/MainPage.xaml
@@ -2,7 +2,6 @@
 <ContentPage
     x:Class="ApiWeatherKrasnov.MainPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps">
-    <maps:Map x:Name="MyMap" IsShowingUser="True" />
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+     
 </ContentPage>
