--- a/ApiWeatherKrasnov/ApiWeatherKrasnov/Views/TodoListPage.xaml
+++ b/ApiWeatherKrasnov/ApiWeatherKrasnov/Views/TodoListPage.xaml
@@ -2,33 +2,39 @@
 <ContentPage
     x:Class="ApiWeatherKrasnov.Views.TodoListPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps">
     <StackLayout>
-        <SearchBar
-            x:Name="searchbarcity"
-            Placeholder="Введите город"
-            SearchButtonPressed="SearchBar_SearchButtonPressed" />
-        <Label FontSize="20" Text="Информация о городе" />
-        <Label
-            x:Name="Temp"
-            FontSize="15"
-            Text="{Binding temp}" />
-        <Label
-            x:Name="Fells"
-            FontSize="15"
-            Text="{Binding feels_like}" />
-        <Label
-            x:Name="Wind"
-            FontSize="15"
-            Text="{Binding wind}" />
-        <Label
-            x:Name="Hum"
-            FontSize="15"
-            Text="{Binding humidity}" />
-        <Label
-            x:Name="Pressure"
-            FontSize="15"
-            Text="{Binding pressure}" />
+        <StackLayout>
+            <SearchBar
+                x:Name="searchbarcity"
+                Placeholder="Введите город"
+                SearchButtonPressed="SearchBar_SearchButtonPressed" />
+            <Label FontSize="20" Text="Информация о городе" />
+            <Label
+                x:Name="Temp"
+                FontSize="15"
+                Text="{Binding temp}" />
+            <Label
+                x:Name="Fells"
+                FontSize="15"
+                Text="{Binding feels_like}" />
+            <Label
+                x:Name="Wind"
+                FontSize="15"
+                Text="{Binding wind}" />
+            <Label
+                x:Name="Hum"
+                FontSize="15"
+                Text="{Binding humidity}" />
+            <Label
+                x:Name="Pressure"
+                FontSize="15"
+                Text="{Binding pressure}" />
+        </StackLayout>
+        <StackLayout>
+            <maps:Map x:Name="MyMap" IsShowingUser="True" HeightRequest="400" />
+        </StackLayout>
     </StackLayout>
 
 
