--- a/ApiWeatherKrasnov/ApiWeatherKrasnov/Views/TodoListPage.xaml
+++ b/ApiWeatherKrasnov/ApiWeatherKrasnov/Views/TodoListPage.xaml
@@ -11,6 +11,10 @@
                 Placeholder="Введите город"
                 SearchButtonPressed="SearchBar_SearchButtonPressed" />
             <Label FontSize="20" Text="Информация о городе" />
+            <Image
+                x:Name="imagecloud"
+                HeightRequest="100"
+                WidthRequest="100" />
             <Label
                 x:Name="sashaCloud"
                 FontSize="15"
